--- a/index.html
+++ b/index.html
@@ -2,13 +2,12 @@
 <html>
 
 <head>
-	<title>WU JUN-YI's personal website</title>
 	<meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1">
 	<meta http-equiv="content-type" content="text/html; charset=utf-8">
 	<meta name="description" content="">
 	<meta name="keywords" content="">
 	<link href="//fonts.googleapis.com/css?family=Roboto+Condensed:700italic,400,300,700" rel="stylesheet"
-		type="text/css"><!--[if lte IE 8]><script src="js/html5shiv.js"></script><![endif]-->
+		type="text/css">
 	<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 	<script src="src/assets/js/skel.min.js"></script>
 	<script src="src/assets/js/skel-panels.min.js"></script>
@@ -16,7 +15,7 @@
 		<link rel="stylesheet" href="src/assets/css/skel-noscript.css">
 		<link rel="stylesheet" href="src/assets/css/style.css">
 		<link rel="stylesheet" href="src/assets/css/style-desktop.css">
-	</noscript><!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]--><!--[if lte IE 9]><link rel="stylesheet" href="css/ie/v9.css" /><![endif]-->
+	</noscript>
 	<script type="module" src="/src/main.js"></script>
 </head>
 
